# zmk-battery-center

./: LICENSE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: tauri-v2.mdc
.github/workflows/: build-linux.yml  build.yml  release.yml
scripts/: bump_up.ps1
src/: App.css  App.tsx  Button.tsx  RegisteredDevicesPanel.tsx  batteryLogger.ts  ble.ts  common.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: ble.rs  common.rs  lib.rs  main.rs  tray.rs  window.rs
src/components/: BatteryGraph.tsx  BatteryIcon.tsx  BatteryStats.tsx  Button.tsx  Modal.tsx  RegisteredDevicesPanel.tsx  SettingsScreen.tsx
src/context/: ConfigContext.tsx
src/utils/: common.ts  config.ts  log.ts  mockData.ts  notificaion.ts  tray.ts  window.ts
