[package]
name = "zmk-battery-center"
version = "0.1.3"
description = "A tray app to monitor battery status of ZMK keyboards"
authors = ["kot149"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zmk_battery_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-png" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
bluest = "0.6.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.16.0"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
log = "^0.4"
ansi_term = "0.12.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    # "Data_Xml_Dom",
    # "Win32_Security",
    # "Win32_System_Threading",
    # "Win32_UI_WindowsAndMessaging",
	# "Win32_Foundation",
    "Win32_System_WinRT", # WinRT API を使うために必要
    "UI_ViewManagement", # UISettings を使うために必要
]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
